# roompla

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  roompla.example.toml
deploy/: roompla.service
migrations/2020-07-08-074347_initial/: down.sql  up.sql
src/: api.rs  config.rs  default-settings.toml  errors.rs  export.rs  extractors.rs  main.rs  models.rs  openapi.yml  schema.rs
webapp/: App.vue  index.html  package-lock.json  package.json  tsconfig.json
webapp/src/: App.vue  index.html  index.ts  runtime.ts  store.ts
webapp/src/apis/: RoomplaApi.ts  index.ts
webapp/src/components/: ChangeEvent.vue  Login.vue  RoomList.vue  RoomOverviewLink.vue  RoomView.vue
webapp/src/lang/: index.ts
webapp/src/lang/translations/: de.json  en.json
webapp/src/models/: Credentials.ts  InlineObject.ts  LoginData.ts  Occupancy.ts  Room.ts  TimeRange.ts  index.ts
