[package]
name = "roompla"
version = "0.1.0"
authors = ["Thomas Krause <krauseto@hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

simplelog = "0.7"
anyhow = "1"
log = "0.4"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
actix-web = "2"
actix-rt = "1.0"
actix-cors = "0.2"
jwt = "0.7"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
r2d2 = "0.8"
chrono = "0.4"
ldap3 = "0.7"
bcrypt = "0.8"
hmac = "0.7"
sha2 = "0.8"
tokio = "0.2"
futures = "0.3"