[package]
name = "roompla"
version = "0.1.0"
authors = ["Thomas Krause <krauseto@hu-berlin.de>"]
edition = "2018"
license = "Apache-2.0"
build = "build.rs"
description = "This is a web application and REST service that allows you too book time slots in a room and export reports who was using a room."

[features]
npm = []
default = ["npm"]

[dependencies]
simplelog = "0.7"
anyhow = "1"
log = "0.4"
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
actix-web = "2"
actix-rt = "1.0"
actix-cors = "0.2"
actix-web-static-files = "2.0"
jwt = "0.7"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.5"
ldap3 = "0.7"
bcrypt = "0.8"
hmac = "0.7"
sha2 = "0.8"
tokio = "0.2"
futures = "0.3"
daemonize = "0.4"
structopt = "0.3"
heim = "0.0.10"
config = "0.10"
rand = "0.7"
csv = "1.1"
dotenv = "0.15"

[build-dependencies]
actix-web-static-files = "2.0"
anyhow = "1"
